<resources>
    <string name="app_name">Foody2</string>
    <string name="info">Info.Profile.TuanVu</string>
    <string name="loading">Loading</string>
    <string name="phien_ban">phiên bản</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Hoặc</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="facebook_app_id">811773509931623</string>
    <string name="facebook_client_token">064547b429472a06e78e00fd8bb2a6a7</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_next"><u>Sign Up</u></string>
    <string name="error_message">error_message</string>
    <string name="recover_your_account">Recover Your Account</string>
    <string name="enter_your_recovery_email">Enter Your Recovery Email</string>
    <string name="do_not_have_an_account"><u>Do not have an account ?</u></string>
    <string name="send_email">Send Email</string>
    <string name="do_you_already_have_an_account"><u>Do you already have an account ?</u></string>
    <string name="sign_in"><u>Login</u></string>
    <string name="where">Ở Đâu</string>
    <string name="eat_what">Ăn Gì?</string>
    <string name="first_new">New</string>
    <string name="category">category</string>
    <string name="nearby">NearBy</string>
    <string name="delivery">Delivery</string>
    <string name="game_and_fun">Game and Fun</string>
    <string name="evaluate">Evaluate</string>
    <string name="blogs">Blogs</string>
    <string name="top_members">Top Members</string>
    <string name="order">Order</string>
    <string name="taianh">Tải Ảnh</string>
    <string name="check_in">Check-in</string>
    <string name="share">Chia sẻ</string>
    <string name="binhluan">Bình Luận</string>
    <string name="luulai">Lưu lại</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="capnhatwifi">Cập Nhật Wifi</string>
    <string name="nhaptenwifi">Nhập tên wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu wifi</string>
    <string name="doimatkhau">Đổi Mật Khẩu</string>
    <string name="huy">Hủy</string>
    <string name="dongy">Đồng Ý</string>
    <string name="thucdon">Thực Đơn</string>
    <string name="tenquanan">Tên Quán Ăn</string>
    <string name="giatoida">Giá Tối Đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="giaohang">Giao Hàng</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenmon">Tên món</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="xoathucdon">Xóa thực đơn</string>
    <string name="giatien">Giá tiền</string>
</resources>