<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:text="@string/doimatkhau"
        android:backgroundTint="@color/background"
        android:layout_margin="@dimen/_8sdp"
        />


    <EditText
        android:id="@+id/txtTenWifi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:hint="@string/nhaptenwifi"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/background_input"
        />

    <EditText
        android:id="@+id/txtMatKhauWifi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:hint="@string/nhapmatkhauwifi"
        android:background="@drawable/background_input"
        android:layout_margin="@dimen/_8sdp"/>

    <LinearLayout
        android:layout_margin="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDongY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:backgroundTint="@color/background"
            android:layout_weight="1"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/btnHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:backgroundTint="@color/com_facebook_blue"
            android:layout_weight="1"
            android:textAllCaps="false"
            />
    </LinearLayout>


</LinearLayout>