<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddangnhap"
    tools:context=".View.SignInActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="@dimen/_40sdp"
        android:background="@color/transparentBackgroundSignIn"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/imageTitle"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/foodytext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_your_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_recovery_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13ssp" />

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:textColor="@color/background"
            android:background="@drawable/radius_button"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawableTint="@color/background"
            tools:ignore="RtlHardcoded,UnusedAttribute"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/createUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/do_not_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>