<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddangnhap"
    tools:ignore="RtlHardcoded,UnusedAttribute"
    tools:context=".View.SignInActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="@dimen/_40sdp"
        android:background="@color/transparentBackgroundSignIn"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/imageTitle"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/foodytext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </FrameLayout>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_13ssp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/background"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableTint="@color/background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/white"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_2sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <Button
            android:id="@+id/login_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_button_login_google"
            android:drawableLeft="@drawable/icon_google"
            android:textAllCaps="false"
            android:text="@string/continue_with_google"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/background"
            android:textSize="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_4ssp"
            android:layout_marginRight="@dimen/_4ssp"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/continue_with_facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawableTint="@color/white"
            android:layout_marginLeft="@dimen/_4ssp"
            android:layout_marginRight="@dimen/_4ssp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/radius_button_login_facebook"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_weight="1"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_next"
                android:layout_weight="0"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>