<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            >

            <EditText
                android:id="@+id/edTenQuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenquanan"
                />
            <EditText
                android:id="@+id/edGiaToiDa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/giatoida"
                android:text="0"
                android:inputType="number"
                />

            <EditText
                android:id="@+id/edGiaToiThieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/giatoithieu"
                android:text="0"
                android:inputType="number"
                />
            <RadioGroup
                android:id="@+id/rdTrangThai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giaohang"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/rdKhongGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khonggiaohang"
                    android:checked="true"
                    android:layout_weight="1"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGioMoCua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giomocua"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:backgroundTint="@color/background_main_tab"/>

                <Button
                    android:id="@+id/btnGioDongCua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giodongcua"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:backgroundTint="@color/background_main_tab"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp">
                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/imgVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_themvideo"
                    />
            </FrameLayout>


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/khungTienIch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/khungChuaChiNhanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>


            <Spinner
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/spinnerKhuVuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <ImageView
                android:id="@+id/imgHinhQuan1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/img_themhinhanh"
                android:scaleType="centerCrop"
                />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp">
                
                <ImageView
                    android:id="@+id/imgHinhQuan2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/imgHinhQuan3"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/imgHinhQuan4"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/imgHinhQuan5"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/imgHinhQuan6"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/img_mini_themhinh"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/khungChuaThucDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>



            <Button
                android:id="@+id/btnThemQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luuquanan"
                android:backgroundTint="@color/background"/>
        </LinearLayout>
        
    </androidx.core.widget.NestedScrollView>

</FrameLayout>