<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/imgChupHinh"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_mini_themhinh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="@dimen/_3sdp">

            <EditText
                android:id="@+id/edTenMon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenmon"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edGiaTien"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/giatien"
                    android:text="0"
                    />
                <Spinner
                    android:id="@+id/spinnerThucDon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/background"
                    >
                </Spinner>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

        <Button
            android:id="@+id/btnThemThucDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themthucdon"
            android:textColor="@color/black"
            android:backgroundTint="@color/background_main_tab"
            />


</LinearLayout>